--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,6 +30,9 @@ jobs:
         
         echo "NEW_VERSION=$NEW_VERSION" >> $GITHUB_ENV
         echo "::set-output name=new-version::$NEW_VERSION"
+        echo "New version: $NEW_VERSION"
+
+        
 
   build-android:
     needs: prepare-version
@@ -59,26 +62,32 @@ jobs:
         path: output/*.apk
 
 
-  build-windows:
-    needs: [prepare-version, build-android]
-    runs-on: windows-latest
-    steps:
-    - uses: actions/checkout@v3
-    - name: Setup .NET
-      uses: actions/setup-dotnet@v2
-      with:
-        dotnet-version: '8.0.x' 
+    build-windows:
+      needs: [prepare-version, build-android]
+      runs-on: windows-latest
+      steps:
+      - uses: actions/checkout@v3
+      - name: Setup .NET
+        uses: actions/setup-dotnet@v2
+        with:
+          dotnet-version: '8.0.x' 
 
-    - name: Update version in project file
-      run: |
-        sed -i "s|<ApplicationDisplayVersion>.*</ApplicationDisplayVersion>|<ApplicationDisplayVersion>${{ needs.prepare-version.outputs.new-version }}</ApplicationDisplayVersion>|g" KoOrderRegister/KoOrderRegister.csproj
 
-    - name: Build MSIX
-      run: |
-        dotnet publish "KoOrderRegister/KoOrderRegister.csproj" -r win-x64 -c Release -f net8.0-windows10.0.19041.0 -p:Version=${{ needs.prepare-version.outputs.new-version }} -p:PackageType=Msix -o output
+      - name: Update version in project file
+        shell: pwsh
+        run: |
+          $csprojPath = "KoOrderRegister/KoOrderRegister.csproj"
+          [xml]$xml = Get-Content $csprojPath
+          $xml.Project.PropertyGroup.ApplicationDisplayVersion = '${{ needs.prepare-version.outputs.new-version }}'
+          $xml.Save($csprojPath)
 
-    - name: Upload MSIX to GitHub Artifacts
-      uses: actions/upload-artifact@v2
-      with:
-        name: msix
-        path: output/*.msix
+      - name: Build MSIX
+        run: |
+          dotnet publish "KoOrderRegister/KoOrderRegister.csproj" -r win-x64 -c Release -f net8.0-windows10.0.19041.0 -p:Version=${{ needs.prepare-version.outputs.new-version }} -p:PackageType=Msix -o output
+
+      - name: Upload MSIX to GitHub Artifacts
+        uses: actions/upload-artifact@v2
+        with:
+          name: msix
+          path: output/*.msix
+
