--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,8 +28,7 @@ jobs:
           NEW_BUILD=$((BUILD + 1))
           NEW_VERSION="$MAJOR.$MINOR.$NEW_BUILD"
           
-          echo "NEW_VERSION=$NEW_VERSION" >> $GITHUB_ENV
-          echo "::set-output name=new-version::$NEW_VERSION"
+          echo "new-version=$NEW_VERSION" >> $GITHUB_OUTPUT
           echo "New version: $NEW_VERSION"
 
   build-android:
@@ -41,18 +40,32 @@ jobs:
         uses: actions/setup-dotnet@v2
         with:
           dotnet-version: '8.0.x'
-  
+      
+      - name: Install xmlstarlet
+        run: sudo apt-get update && sudo apt-get install -y xmlstarlet
+      
       - name: Update version in project file
         run: |
-          sed -i "s|<ApplicationDisplayVersion>.*</ApplicationDisplayVersion>|<ApplicationDisplayVersion>${{ needs.prepare-version.outputs.new-version }}</ApplicationDisplayVersion>|g" KoOrderRegister/KoOrderRegister.csproj
-  
+          xmlstarlet ed -L -u "//ApplicationDisplayVersion" -v "${{ needs.prepare-version.outputs.new-version }}" KoOrderRegister/KoOrderRegister.csproj
+      
+      - name: Display .csproj File
+        run: cat KoOrderRegister/KoOrderRegister.csproj
+      
       - name: Restore dependencies
         run: dotnet restore
-  
+      
       - name: Build APK
         run: |
-          dotnet publish "KoOrderRegister.csproj" -f net8.0-android -c Release -p:AndroidKeyStore=true -p:AndroidSigningKeyStore=kor.keystore -p:AndroidSigningKeyAlias=kor_pub -p:AndroidSigningKeyPass=$KEYPASS -p:AndroidSigningStorePass=$KEYPASS -o output
-  
+          dotnet publish "KoOrderRegister.csproj" -f net8.0-android -c Release \
+          -p:AndroidKeyStore=true \
+          -p:AndroidSigningKeyStore=kor.keystore \
+          -p:AndroidSigningKeyAlias=kor_pub \
+          -p:AndroidSigningKeyPass=${{ secrets.KEYPASS }} \
+          -p:AndroidSigningStorePass=${{ secrets.KEYPASS }} \
+          -o output
+        env:
+          KEYPASS: ${{ secrets.KEYPASS }}
+      
       - name: Upload APK to GitHub Artifacts
         uses: actions/upload-artifact@v3
         with:
@@ -68,7 +81,7 @@ jobs:
         uses: actions/setup-dotnet@v2
         with:
           dotnet-version: '8.0.x' 
-  
+      
       - name: Update version in project file
         shell: pwsh
         run: |
@@ -76,11 +89,21 @@ jobs:
           [xml]$xml = Get-Content $csprojPath
           $xml.Project.PropertyGroup.ApplicationDisplayVersion = '${{ needs.prepare-version.outputs.new-version }}'
           $xml.Save($csprojPath)
-  
+      
+      - name: Display .csproj File
+        run: Get-Content KoOrderRegister/KoOrderRegister.csproj
+      
+      - name: Restore dependencies
+        run: dotnet restore
+      
       - name: Build MSIX
         run: |
-          dotnet publish "KoOrderRegister.csproj" -r win-x64 -c Release -f net8.0-windows10.0.19041.0 -p:Version=${{ needs.prepare-version.outputs.new-version }} -p:PackageType=Msix -o output
-  
+          dotnet publish "KoOrderRegister.csproj" -r win-x64 -c Release \
+          -f net8.0-windows10.0.19041.0 \
+          -p:Version=${{ needs.prepare-version.outputs.new-version }} \
+          -p:PackageType=Msix \
+          -o output
+      
       - name: Upload MSIX to GitHub Artifacts
         uses: actions/upload-artifact@v2
         with:
