--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,7 +32,7 @@ jobs:
           echo "New version: $NEW_VERSION"
  build-android:
     needs: prepare-version
-    runs-on: [self-hosted, ko-order-register-vbblj-2l84g]
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
       
@@ -71,7 +71,7 @@ jobs:
 
  build-windows:
     needs: [prepare-version, build-android]
-    runs-on: [self-hosted, ko-order-register-vbblj-2l84g]
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
       
