--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -53,7 +53,7 @@ jobs:
 
       # Alternatív megoldás: Explicit telepítés
       - name: Install MAUI Workloads
-        run: dotnet workload install maui-android maui-ios maui-maccatalyst
+        run: dotnet workload install maui-android
 
       - name: Decode Keystore File
         run: |
@@ -106,7 +106,7 @@ jobs:
 
       # Alternatív megoldás: Explicit telepítés
       - name: Install MAUI Workloads
-        run: dotnet workload install maui-android maui-ios maui-maccatalyst
+        run: dotnet workload install maui-android
 
       - name: Update version in project file
         shell: pwsh
