--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,7 +12,6 @@ on:
 
 jobs:
   prepare-version:
-    #runs-on: ubuntu-latest
     runs-on: self-hosted
     outputs:
       new-version: ${{ steps.set_version.outputs.new-version }}
@@ -23,18 +22,12 @@ jobs:
       - name: Set new version
         id: set_version
         run: |
-          echo "Reading current version from csproj file..."
-          CURRENT_VERSION=$(grep '<ApplicationDisplayVersion>' KoOrderRegister/KoOrderRegister.csproj | sed -n 's|.*<ApplicationDisplayVersion>\(.*\)</ApplicationDisplayVersion>.*|\1|p')
-          echo "Current version: $CURRENT_VERSION"
+           MAJOR_VERSION=${{ variables.MAJOR_VERSION }}
+           MINOR_VERSION=${{ variables.MINOR_VERSION }}
+           PATCH_VERSION=${{ variables.PATCH_VERSION }}
+           MINOR_VERSION = MINOR_VERSION + 1
+           PATCH_VERSION = PATCH_VERSION + 1
+           echo "Building major version $MAJOR_VERSION.$MINOR_VERSION.$PATCH_VERSION"
+           ${{ variables.PATCH_VERSION }} = PATCH_VERSION
+           ${{ variables.MINOR_VERSION }} = MINOR_VERSION
           
-          IFS='.' read -ra VERSION_PARTS <<< "$CURRENT_VERSION"
-          MAJOR=${VERSION_PARTS[0]}
-          MINOR=${VERSION_PARTS[1]}
-          BUILD=${VERSION_PARTS[2]}
-          
-          # Increment the build number
-          NEW_BUILD=$((BUILD + 1))
-          NEW_VERSION="$MAJOR.$MINOR.$NEW_BUILD"
-          
-          echo "new-version=$NEW_VERSION" >> $GITHUB_OUTPUT
-          echo "New version: $NEW_VERSION"
