--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,12 +22,12 @@ jobs:
       - name: Set new version
         id: set_version
         run: |
-           MAJOR_VERSION=${{ variables.MAJOR_VERSION }}
-           MINOR_VERSION=${{ variables.MINOR_VERSION }}
-           PATCH_VERSION=${{ variables.PATCH_VERSION }}
+           MAJOR_VERSION=${{ vars.MAJOR_VERSION }}
+           MINOR_VERSION=${{ vars.MINOR_VERSION }}
+           PATCH_VERSION=${{ vars.PATCH_VERSION }}
            MINOR_VERSION = MINOR_VERSION + 1
            PATCH_VERSION = PATCH_VERSION + 1
            echo "Building major version $MAJOR_VERSION.$MINOR_VERSION.$PATCH_VERSION"
-           ${{ variables.PATCH_VERSION }} = PATCH_VERSION
-           ${{ variables.MINOR_VERSION }} = MINOR_VERSION
+           ${{ vars.PATCH_VERSION }} = PATCH_VERSION
+           ${{ vars.MINOR_VERSION }} = MINOR_VERSION
           
