--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,9 +23,8 @@ jobs:
         id: set_version
         run: |
            MAJOR_VERSION=${{ vars.MAJOR_VERSION }}
-           MINOR_VERSION=${{ vars.MINOR_VERSION }}
-           PATCH_VERSION=${{ vars.PATCH_VERSION }}
+           MINOR_VERSION=${{ vars.MINOR_VERSION+1 }}
+           PATCH_VERSION=${{ vars.PATCH_VERSION+1 }}
            echo "Building major version $MAJOR_VERSION.$MINOR_VERSION.$PATCH_VERSION"
-           ${{ vars.PATCH_VERSION }} = PATCH_VERSION
-           ${{ vars.MINOR_VERSION }} = MINOR_VERSION
+           vars.PATCH_VERSION=PATCH_VERSION
           
