--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,6 +17,8 @@ jobs:
       new-version: ${{ steps.set_version.outputs.new-version }}
     steps:
       - uses: actions/checkout@v3
+      - name: Show version.txt content
+        run: cat version.txt
       - name: Read Version
         id: version
         run: |
