--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,11 +3,9 @@ name: Test
 on:
   push:
     branches: 
-       - 92-test-barnch 
        - 92-create-github-runner
   pull_request:
     branches: 
-       - 92-test-barnch
        - 92-create-github-runner
 
 jobs:
@@ -22,6 +20,7 @@ jobs:
       - name: Read Version
         id: version
         run: |
+            awk -F'.' '{print $1 "." ($2 + 1) "." $3}' version.txt > temp_version.txt && mv temp_version.txt version.txt
             MAJOR=$(awk -F'.' '{print $1}' version.txt)
             MINOR=$(awk -F'.' '{print $2}' version.txt)
             PATCH=$(awk -F'.' '{print $3}' version.txt)
