--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,41 +1,42 @@
 name: Test
 
 env:
- barnch-name: 92-create-github-runner
+  branch-name: '92-create-github-runner'  
+
 on:
   push:
     branches: 
-       - barnch-name
+      - ${{ env.branch-name }}  
   pull_request:
     branches: 
-       - barnch-name
+      - ${{ env.branch-name }} 
 
 jobs:
   prepare-version:
     runs-on: self-hosted
     outputs:
-      new-version: ${{ steps.set_version.outputs.new-version }}
+      new-version: ${{ steps.version.outputs.new-version }} 
     steps:
       - uses: actions/checkout@v3
       - name: Show version.txt content
         run: cat version.txt
       - name: Read Version
-        id: version
+        id: version  # Módosított ID a 'version'-re
         run: |
-            awk -F'.' '{print $1 "." ($2 + 1) "." $3}' version.txt > temp_version.txt && mv temp_version.txt version.txt
-            MAJOR=$(awk -F'.' '{print $1}' version.txt)
-            MINOR=$(awk -F'.' '{print $2}' version.txt)
-            PATCH=$(awk -F'.' '{print $3}' version.txt)
-            echo "Current version: $MAJOR.$MINOR.$PATCH"
+          awk -F'.' '{print $1 "." ($2 + 1) "." $3}' version.txt > temp_version.txt && mv temp_version.txt version.txt
+          MAJOR=$(awk -F'.' '{print $1}' version.txt)
+          MINOR=$(awk -F'.' '{print $2}' version.txt)
+          PATCH=$(awk -F'.' '{print $3}' version.txt)
+          echo "::set-output name=new-version::$MAJOR.$MINOR.$PATCH"  # Megfelelő kimenet beállítása
+          echo "Current version: $MAJOR.$MINOR.$PATCH"
       - name: Commit and Push
         run: |
-            git config --local user.email "action@github.com"
-            git config --local user.name "GitHub Action"
-            git add version.txt
-            git commit -m "Update version to $MAJOR.$MINOR.$PATCH"
+          git config --local user.email "action@github.com"
+          git config --local user.name "GitHub Action"
+          git add version.txt
+          git commit -m "Update version to ${{ steps.version.outputs.new-version }}"  # Helyes változó használata
       - name: Push changes
         uses: ad-m/github-push-action@master
         with:
           github_token: ${{ secrets.TOKEN }}
-          branch: 'barnch-name'
-
+          branch: ${{ env.branch-name }} 
