--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -66,7 +66,7 @@ jobs:
           echo "${{ secrets.KEYSTORE_B64 }}" | base64 --decode > KoOrderRegister/kor.keystore
 
       - name: Restore dependencies
-        run:  dotnet restore KoOrderRegister/KoOrderRegister.csproj -f net8.0-android
+        run:  dotnet restore KoOrderRegister/KoOrderRegister.csproj -p:TargetFramework=net8.0-android
 
       - name: Build APK
         run: |
