add android sdk

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -64,6 +64,34 @@ jobs:
       - name: Decode Keystore File
         run: |
           echo "${{ secrets.KEYSTORE_B64 }}" | base64 --decode > KoOrderRegister/kor.keystore
+      - name: Set up Java
+        uses: actions/setup-java@v3
+        with:
+          distribution: 'temurin'
+          java-version: '11'
+
+      - name: Install Android SDK
+        run: |
+            # Create directories
+            mkdir -p $HOME/android-sdk/cmdline-tools
+            # Download command line tools
+            curl -o commandlinetools.zip https://dl.google.com/android/repository/commandlinetools-linux-9123335_latest.zip
+            # Unzip
+            unzip -q commandlinetools.zip -d $HOME/android-sdk/cmdline-tools
+            # Rename the folder
+            mv $HOME/android-sdk/cmdline-tools/cmdline-tools $HOME/android-sdk/cmdline-tools/latest
+            # Set environment variables
+            echo "ANDROID_SDK_ROOT=$HOME/android-sdk" >> $GITHUB_ENV
+            echo "ANDROID_HOME=$HOME/android-sdk" >> $GITHUB_ENV
+            echo "$HOME/android-sdk/platform-tools" >> $GITHUB_PATH
+            echo "$HOME/android-sdk/emulator" >> $GITHUB_PATH
+            echo "$HOME/android-sdk/tools" >> $GITHUB_PATH
+            echo "$HOME/android-sdk/tools/bin" >> $GITHUB_PATH
+            echo "$HOME/android-sdk/cmdline-tools/latest/bin" >> $GITHUB_PATH
+            # Accept licenses
+            yes | $HOME/android-sdk/cmdline-tools/latest/bin/sdkmanager --licenses
+            # Install required SDK packages
+            $HOME/android-sdk/cmdline-tools/latest/bin/sdkmanager "platform-tools" "platforms;android-33" "build-tools;33.0.2"
 
       - name: Restore dependencies
         run:  dotnet restore KoOrderRegister/KoOrderRegister.csproj -p:TargetFrameworks=net8.0-android
