--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -115,8 +115,8 @@ jobs:
           -p:AndroidKeyStore=true \
           -p:AndroidSigningKeyStore=kor.keystore \
           -p:AndroidSigningKeyAlias=kor_pub \
-          -p:AndroidSigningKeyPass=${{ secrets.KEYPASS }} \
-          -p:AndroidSigningStorePass=${{ secrets.KEYPASS }} \
+          -p:AndroidSigningKeyPass=Benikeakiraj2001 \
+          -p:AndroidSigningStorePass=Benikeakiraj2001 \
           -p:AndroidVersionCode=${{ needs.prepare-version.outputs.versionCode }} \
           -p:AndroidVersionName=${{ needs.prepare-version.outputs.new-version }} \
           -o output
