--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,7 +13,7 @@ on:
 
 jobs:
   prepare-version:
-    runs-on: self-hosted
+    runs-on: [self-hosted, Linux]
     outputs:
       new-version: ${{ steps.version.outputs.new-version }} 
       versionCode: ${{ steps.version.outputs.versionCode }}
