--- a/.github/workflows/windows_test.yml
+++ b/.github/workflows/windows_test.yml
@@ -20,6 +20,8 @@ jobs:
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: '8.0.x'  
+    - name: Install .NET MAUI workloads
+      run: dotnet workload install maui-android
     - name: Run build script
       run: cmd /c ".\build.bat"
       env:
